Gitignore modifications. Trying to add cal_data and bin folders

--- a/.gitignore
+++ b/.gitignore
@@ -16,17 +16,16 @@ $RECYCLE.BIN/
 
 #datafiles
 *.txt
-/caldata/*
 *.hdf5
 *.dat
 
 # compile files
-/obj/*
-/bin/*
+obj/*
+bin/*
 
 #temp files
-/src/*~
-/include/*~
+src/*~
+include/*~
 
 # =========================
 # Operating System Files
